--- a/widget/index.html
+++ b/widget/index.html
@@ -1,32 +1,40 @@
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    :root {
-      --bg-color: white;
-
-    }
-
-    @media (prefers-color-scheme: dark) {
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
       :root {
-        --bg-color: rgba(0, 0, 0, .8);
+        --bg-color: #ff7676;
+        --custom: yellow;
       }
-    }
-  </style>
-  <title>Document</title>
-</head>
 
-<body style="background-color: var(--bg-color);">
-  <div style="width: 70%; margin: 0 auto;">
-    <div id="cusdis_thread" data-theme="auto" data-page-title="testing" data-iframe="http://localhost:3001/iframe.js" data-host="http://localhost:3000"
-      data-app-id="10ec786a-86b4-4901-a1a8-e47e6d17299d" data-page-id="lalala" data-show-indicator="true"></div>
-    <script src="http://localhost:3000/js/widget/lang/zh-cn.js"></script>
-    <script type="module" async src="/index.js"></script>
-    <!-- <script async src="http://localhost:3000/js/cusdis.es.js"></script> -->
-  </div>
-</body>
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --bg-color: #372040;
+        }
+      }
+    </style>
+    <title>Document</title>
+  </head>
 
+  <body style="background-color: var(--bg-color)">
+    <div style="width: 100%; margin: 0 auto">
+      <div
+        id="cusdis_thread"
+        data-theme="light"
+        data-page-title="testing"
+        data-iframe="http://localhost:3001/iframe.js"
+        data-host="http://localhost:3000"
+        data-app-id="df1567b8-2d83-4935-ba49-de9db8fadf19"
+        data-page-id="lalala"
+        data-show-indicator="true"
+        data-custom-style="color:white;"
+      ></div>
+      <style></style>
+      <script src="http://localhost:3000/js/widget/lang/no.js"></script>
+      <script type="module" async src="/index.js"></script>
+      <!-- <script async src="http://localhost:3000/js/cusdis.es.js"></script> -->
+    </div>
+  </body>
 </html>
